settings.jar & pom.xml fix